[project]
name = "liquid"
version = "0.1.0"
description = "Kotlin inspired Python library for data flow manipulation"
readme = "README.md"
authors = [{ name = "Yibo Wei", email = "david_wyb2001@outlook.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
